# doc2mermaid

./: .gitignore  README.md  pyproject.toml
doc2map/: __init__.py  cli.py  core.py  extractor.py  renderer.py
doc2mermaid/: __init__.py  cli.py  core.py  extractor.py  renderer.py  styles.py
examples/: demo.py
tests/: test_cli.py  test_core.py  test_extractor.py  test_renderer.py  test_styles.py
